Setup DedicatedServer config reading
Using my own ANDF jar config reading and writing is complete.
Made changes to DedicatedServer console system and renamed Server
streams to Dust streams